src/k8s/platform/services/cloudflared/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflared
  annotations:
    argocd.argoproj.io/sync-wave: "-4"
